Add build flag to set the irrigation log level
Signed-off-by: Daniel Polanco <jdanypa@gmail.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,4 +21,6 @@ lib_deps =
 	jchristensen/Timezone@^1.2.4
 	adafruit/RTClib@^2.1.1
 	SPI
-build_flags = -D DEBUG_NTPClient
+build_flags =
+	-D DEBUG_NTPClient
+	-D LOG_LEVEL=LOG_DEBUG
