--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,5 @@ lib_deps =
 	adafruit/RTClib@^2.1.1
 	SPI
 build_flags =
-	!python git_rev_macro.py
-	-DLOG_LEVEL=LOG_DEBUG
-
-debug_build_flags = -DDEBUG_NTPClient
+	-D DEBUG_NTPClient
+	-D LOG_LEVEL=LOG_DEBUG
