Generate dinamically the  version tag
Signed-off-by: Daniel Polanco <jdanypa@gmail.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,5 +22,7 @@ lib_deps =
 	adafruit/RTClib@^2.1.1
 	SPI
 build_flags =
-	-D DEBUG_NTPClient
-	-D LOG_LEVEL=LOG_DEBUG
+	!python git_rev_macro.py
+	-DLOG_LEVEL=LOG_DEBUG
+
+debug_build_flags = -DDEBUG_NTPClient
