update storage functions and add calls form wifi init

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,6 @@ lib_deps =
 	SPI
 build_flags =
 	!python git_rev_macro.py
-	-DLOG_LEVEL=LOG_DEBUG
+	-DLOG_LEVEL=LOG_INFO
 
-debug_build_flags = -DDEBUG_NTPClient
+debug_build_flags = 
