--- a/platformio.ini
+++ b/platformio.ini
@@ -21,8 +21,9 @@ lib_deps =
 	jchristensen/Timezone@^1.2.4
 	adafruit/RTClib@^2.1.1
 	SPI
+	adafruit/Adafruit SSD1306@^2.5.7
 build_flags =
 	!python git_rev_macro.py
-	-DLOG_LEVEL=LOG_DEBUG
+	-DLOG_LEVEL=LOG_INFO
 
-debug_build_flags = -DDEBUG_NTPClient
+debug_build_flags = 
