--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
-platform = espressif8266
-board = esp12e
+[env]
 framework = arduino
 monitor_speed = 115200
 monitor_raw = True
@@ -24,6 +22,16 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.7
 build_flags =
 	!python git_rev_macro.py
+	-DBUILD_TIME_UNIX=$UNIX_TIME
+	-DPIOENV=\"$PIOENV\"
 	-DLOG_LEVEL=LOG_INFO
 
-debug_build_flags = 
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
+
+[env:esp32]
+platform = espressif32@4.2.0
+board = esp32doit-devkit-v1
+framework = arduino
