Add blink support for an option of less than 10 datastreams
Signed-off-by: Marco Mora <morafoo@gmail.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
 	adafruit/RTClib@^2.1.1
 	SPI
 	adafruit/Adafruit SSD1306@^2.5.7
+	blynkkk/Blynk@^1.2.0
 build_flags =
 	!python git_rev_macro.py
 	-DBUILD_TIME_UNIX=$UNIX_TIME
